Finished jlinking part of jep200 lab.